--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,21 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="keywords" content="fitness, entrenamiento, Jeremy, premium, comunidad, videos exclusivos, nutricion, transformacion fisica, gimnasio online, rutinas de ejercicio" />
+    <meta name="author" content="Jeremy Fitness Pro" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="Spanish" />
+    <meta name="geo.region" content="CO" />
+    <meta name="geo.placename" content="Colombia" />
+    <link rel="canonical" href="https://jeremyfitness.com" />
     <meta
       name="description"
-      content="Plataforma de fitness exclusiva de Jeremy - Entrenamiento personalizado, contenido premium y comunidad fitness"
+      content="Plataforma de fitness exclusiva de Jeremy - Entrenamiento personalizado, contenido premium y comunidad fitness. Transforma tu cuerpo con rutinas profesionales, nutrición personalizada y soporte 24/7."
     />
+    <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- Fuentes -->
@@ -16,12 +27,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <!-- Meta tags para redes sociales -->
-    <meta property="og:title" content="Jeremy Fitness Pro - Plataforma Exclusiva" />
-    <meta property="og:description" content="Entrenamiento personalizado y contenido fitness premium con Jeremy" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Jeremy Fitness Pro - Plataforma Exclusiva de Entrenamiento" />
+    <meta property="og:description" content="Transforma tu cuerpo con entrenamientos exclusivos de Jeremy. Contenido premium, comunidad fitness y nutrición personalizada. Únete a miles de usuarios satisfechos." />
     <meta property="og:url" content="https://jeremyfitness.com" />
+    <meta property="og:site_name" content="Jeremy Fitness Pro" />
+    <meta property="og:locale" content="es_CO" />
+    <meta property="og:image" content="https://jeremyfitness.com/og-image.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Jeremy Fitness Pro - Entrenamiento Premium" />
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Jeremy Fitness Pro - Plataforma Exclusiva de Entrenamiento" />
+    <meta name="twitter:description" content="Transforma tu cuerpo con entrenamientos exclusivos de Jeremy. Contenido premium, comunidad fitness y nutrición personalizada." />
+    <meta name="twitter:image" content="https://jeremyfitness.com/og-image.jpg" />
+    <meta name="twitter:site" content="@JeremyFitnessPro" />
 
-    <title>Jeremy Fitness Pro - Plataforma Exclusiva</title>
+    <title>Jeremy Fitness Pro - Entrenamiento Premium | Comunidad Fitness Exclusiva</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
